--- a/alex.html
+++ b/alex.html
@@ -31,7 +31,8 @@
                     <p class="meta one">Alexander Quyen Ngo</p>
                     <p class="meta two">Alex Ngo</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span> 
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to1">
                 <div class="content">
@@ -39,7 +40,8 @@
                     <p class="meta four">Alex</p>
                     <p class="meta five">my parents call me it</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span> 
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to2">
                 <div class="content">
@@ -53,14 +55,16 @@
                     <p class="meta thirteen">Ngo, is Vietnamese</p>
                     <img class="circle" src="images/circle.png">
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: _________________________________________________________________<br>_______.</p>
                     <p class="meta-2 six">Ngo is my family name that it reminds me of who I come <br>from</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
@@ -71,7 +75,8 @@
                     <br>
                     <br>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
             </div>
             <div class="page" id="scroll-to5">
@@ -79,7 +84,8 @@
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: <br>_________________________________.</p>
                     <p class="meta-2 nine">No one can pronounce Ngo</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to6">
                 <div class="content">
