--- a/kuu.html
+++ b/kuu.html
@@ -31,7 +31,8 @@
                     <p class="meta one">Connie Chen</p>
                     <p class="meta two">Kuu Chen</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to1">
                 <div class="content">
@@ -40,7 +41,8 @@
                     <p class="meta five">as a high school senior, I wanted</p>
                     <p class="meta-2 six">to go with a different name, but figured it would be inconve-nient to do so with people who already called me by my real name for 3 years. I also went to a school where my grade had 56 people, so everybody knew each other as well. I decided to go with a new name when I came to college, because I wanted a name that felt more like me</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to2">
                 <img class="arrows" id="hover" src="images/up.png">
@@ -58,7 +60,8 @@
                     <p class="meta-2 thirteen">"health," and the second is a female character (no specific meaning, but the character includes the "prefix" that means female, so it's considered a female character) <br><br><br></p>                    
                 </div>
                 <img class="arrows" id="hover2" src="images/down.png">
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to3">
                 <img class="arrows" id="hover3" src="images/up.png">
@@ -67,7 +70,8 @@
                     <p class="meta-2 six">I haven't met somebody else with the name "Kuu," so for me my name is mine alone (thus far). And to an extent, it means that my identification is mine alone (thus far). I didn't choose the name for that reason though, I didn't have a particular reason for the name "Kuu," I just wanted a new name. I honestly always disliked my real name, thinking that it felt weird when people called me by it. All my closest friends back at home who also called me by my real name at some point all think that "Kuu" is a better name for me too, so I chose correctly I think <br><br></p>
                 </div>
                 <img class="arrows" id="hover4" src="images/down.png">  
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span> 
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to4">
                 <img class="arrows" id="hover5" src="images/up.png">
@@ -78,14 +82,16 @@
                     <br>
                 </div>
                 <img class="arrows" id="hover6" src="images/down.png">
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">This isn't particularly negative, but because of the way it looks and sounds, a lot of people still make assumptions about the origin of my name. Though there may be subcons-cious choices involved in my choosing "Kuu," I dislike when people automatically ask where I am from just because it's an uncommon name in both English and Chinese</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to6">
                 <div class="content">
