--- a/maggie.html
+++ b/maggie.html
@@ -32,7 +32,8 @@
                     <p class="meta two">Maggie</p>
                     <p class="meta three">Chuang</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to1">
                 <div class="content">
@@ -41,7 +42,8 @@
                     <p class="meta five">I've just never needed to</p>
                     <p class="meta-2 six">change it for anything. I generally like my name and have been comfortable with it</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to2">
                 <img class="arrows" id="hover" src="images/up.png">
@@ -59,14 +61,16 @@
                     <p class="meta-2 twelve">I don't know the literal meaning, but my first name has been passed down for generations on my mom's side. I know my last name is an adapted version of "zhuang", which means village in Taiwanese <br><br></p>                  
                 </div>
                 <img class="arrows" id="hover2" src="images/down.png">
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: _______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">My name is very representative of the fact that I'm biracial, since each part specifically comes from my mom and dad's sides. It also drew a lot of attention in my primarily-white high school, so I own my name with a lot of pride</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
@@ -77,7 +81,8 @@
                     <br>
                     <br>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
             </div>
             <div class="page" id="scroll-to5">
@@ -85,7 +90,8 @@
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">Generally, every teacher I had couldn't say my last name. Lots of friends couldn't say it either—one time, when I tried to teach a group how to pronounce it, they quickly devolved into just yelling ching/chang/chung/chong/whatever other racist-sounding asian words they could think of</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to6">
                 <div class="content">
