--- a/rita.html
+++ b/rita.html
@@ -32,7 +32,8 @@
                     <p class="meta zero">Rita Verma</p>
                     <p class="meta three">Reets</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to1">
                 <div class="content">
@@ -41,7 +42,8 @@
                     <p class="meta five">it is the name that was given to me</p>
                     <p class="meta-2 six">at birth, and I stuck with it</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to2">
                 <div class="content">
@@ -56,14 +58,16 @@
                     <p class="meta ten">Rita</p>
                     <p class="meta eleven">pearl</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: ___________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">I have a short name and it’s easy to pronounce which makes me feel approachable to most people. My name is classically feminine—and that’s the way I carry myself as well. Simple but classic</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
@@ -73,7 +77,8 @@
                     <br>
                     <br>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">  -->
             </div>
             <div class="page" id="scroll-to5">
@@ -81,7 +86,8 @@
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ______________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">When I was very young (7 or 8) a few times one kid called me retard—ie RITARD. It only happened once or twice but I still remember it. As an adult, nothing negative I can recall</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to6">
                 <div class="content">
