--- a/peeti.html
+++ b/peeti.html
@@ -33,7 +33,8 @@
                     <p class="meta two">Peeti Sithiyopasakul</p>
                     <p class="meta three">Phumb</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span> 
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to1">
                 <div class="content">
@@ -42,7 +43,8 @@
                     <p class="meta five">it is the name that was given to </p>
                     <p class="meta-2 six">me at birth, and I stuck with it</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to2">
                 <div class="content">
@@ -58,14 +60,16 @@
                     <p class="meta thirteen">joy in Thai</p>
                     <img class="circle" src="images/circle.png">
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: __________________________________________________________________.</p>
                     <p class="meta-2 six">It helps to remind me of my Thai nationality and culture</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
@@ -76,7 +80,8 @@
                     <br>
                     <br>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
             </div>
             <div class="page" id="scroll-to5">
@@ -84,7 +89,8 @@
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ____________________________________________________________________.</p>
                     <p class="meta-2 nine">I've had people use my name in order to make a racial slur</p>
                 </div>
-                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo1"></span></span>
+                <span href="#scroll-to" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span class="scrollTo2"></span></span>
             </div>
             <div class="page" id="scroll-to6">
                 <div class="content">
